[package]
name = "ethers-web"
version = "0.1.0"
edition = "2021"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "ethers", "ethereum", "web3", "wasm", "walletconnect"]

[dependencies]
walletconnect-client = { git = "https://github.com/quay-rs/walletconnect-client" }
serde = { version = "1.0", features = ["derive", "rc"] }
async-trait = "0.1"
getrandom = { version = "0.2", features = ["js"] }
ethers = "2.0"
gloo-utils = "0.2"
thiserror = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"
serde_json = "1.0"
gloo = { version = "0.10.0", features = ["futures"] }
log = "0.4.20"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
data-encoding = "2.4"
hex = "0.4.3"
rand = "0.8"
url = "2.4.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
futures = "0.3.28"
qrcode-generator = "4.1.9"
unsafe-send-sync = "0.1.0"
