[package]
name = "ethers-web"
description = "WASM library for web injected and walletconnect dApp connections"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://quay.rs/"
repository = "https://github.com/quay-rs/ethers-web"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "ethereum", "web3", "wasm", "walletconnect"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[dependencies]
walletconnect-client = "0.1"
tokio = { version = "1.35", default-features = false, features = ["sync", "macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
async-trait = "0.1"
getrandom = { version = "0.2", features = ["js"] }
ethers = "2.0"
gloo-utils = "0.2"
thiserror = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
gloo = { version = "0.11.0", features = ["futures"] }
log = "0.4.20"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
data-encoding = "2.4"
hex = "0.4.3"
rand = "0.8"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
futures = "0.3.28"
qrcode-generator = "4.1.9"
unsafe-send-sync = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
gloo-storage = "0.3.0"
yew = { version = "0.21", features = ["csr"], optional = true }
yew-hooks = {version = "0.3", optional = true }
leptos = { version = "0.6", features = ["csr"], optional = true }

[features]
leptos = ["dep:leptos"]
yew = ["dep:yew", "dep:yew-hooks"]
