[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
ethers-web = { path = "../../", features = ["yew"] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
qrcode-generator = "4.1"
log = "0.4"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
data-encoding = "2.5.0"
